fixed alignment for pfp

--- a/experience.css
+++ b/experience.css
@@ -103,7 +103,7 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-left: 2px;
+    margin-left: 0px;
 }
 
 #emailiconlight {
